# ARIEL_Data_Challenge_2025_Real_Optical_Physics_Simulation

./: FINAL_2000_EPOCHS_RESULTS.md  README.md  ariel_kaggle_submission_notebook.ipynb  ariel_quantum_nebula_kaggle_submission.csv  ariel_quantum_nebula_submission.csv  multi_planet_real_predictions.json  multi_planet_real_predictions.py
MODEL/: ARIEL_BACKUP_RECOVERY_GUIDE.md  ARIEL_Data_Challenge_2025_Submission.ipynb  ARIEL_ROADMAP.md  ARIEL_ROADMAP_OK.md  ARIEL_Submission_Notebook.ipynb  CALIBRATING.txt  CMakeCache.txt  CMakeLists.txt  CMakeLists_linux.txt  CMakeLists_simple.txt  ESTADO_FINAL_SISTEMA.md  KAGGLE_SUBMISSION_PROCESS.md  KAGGLE_SUBMISSION_README.md  KAGGLE_UPLOAD_INSTRUCTIONS.md  Makefile  Makefile_ariel  Makefile_direct  Makefile_kaggle  PROYECTO_ESTADO_ACTUAL.md  README_KAGGLE_SUBMISSION.md  RESUMEN_EJECUTIVO_FINAL.md  RESUMEN_FINAL.md  ariel_2025_REAL_PHYSICS_submission.csv  ariel_calibration.py  ariel_calibration_cpu_fast.py  ariel_calibration_gpu.py  ariel_data_loader.hpp  ariel_data_loader_lazy.hpp  ariel_kaggle_inference.py  ariel_kaggle_notebook.ipynb  ariel_kaggle_standalone.cpp  ariel_kaggle_submission_notebook.ipynb  ariel_roadmap.md  ariel_trainer.cpp  ariel_trainer.cu  build_kaggle.sh  calibrate_ariel_data.py  checkpoint_best  checkpoint_best_quantum.txt  cmake_install.cmake  (+40 more)
